<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="TextView"
        android:layout_weight="1"
        android:gravity="center|end"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="TextView"
        android:layout_weight="1"
        android:gravity="center|end"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="TextView"
        android:layout_weight="1"
        android:gravity="center|end" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        >
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tV_c"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/tV_c"
                android:layout_weight="1"
                android:gravity="center"/>
            <TextView
                android:id="@+id/tV_devide"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/tV_devide"
                android:layout_weight="1"
                android:gravity="center"/>
            <TextView
                android:id="@+id/tV_x"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/tV_x"
                android:layout_weight="1"
                android:gravity="center"/>
            <TextView
                android:id="@+id/tV_delite"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/tV_delite"
                android:layout_weight="1"
                android:gravity="center"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tV_7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/tV_7"
                android:layout_weight="1"
                android:gravity="center"/>
            <TextView
                android:id="@+id/tV_8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/tV_8"
                android:layout_weight="1"
                android:gravity="center"/>
            <TextView
                android:id="@+id/tV_9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/tV_9"
                android:layout_weight="1"
                android:gravity="center"/>
            <TextView
                android:id="@+id/tV_minus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/tV_minus"
                android:layout_weight="1"
                android:gravity="center"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">
            <TextView
                android:id="@+id/tV_4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/tV_4"
                android:layout_weight="1"
                android:gravity="center"/>
            <TextView
                android:id="@+id/tV_5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/tV_5"
                android:layout_weight="1"
                android:gravity="center"/>
            <TextView
                android:id="@+id/tV_6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/tV_6"
                android:layout_weight="1"
                android:gravity="center"/>
            <TextView
                android:id="@+id/tV_plus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/tV_plus"
                android:layout_weight="1"
                android:gravity="center"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tV_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/tV_1"
                android:layout_weight="1"
                android:gravity="center"/>
            <TextView
                android:id="@+id/tV_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/tV_2"
                android:layout_weight="1"
                android:gravity="center"/>
            <TextView
                android:id="@+id/tV_3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/tV_3"
                android:layout_weight="1"
                android:gravity="center"/>
            <TextView
                android:id="@+id/tV_result"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="result"
                android:layout_weight="1"
                android:gravity="center"/>

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tV_persent"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/tV_persent"
                android:layout_weight="1"
                android:gravity="center"/>
            <TextView
                android:id="@+id/tV_0"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/tV_zero"
                android:layout_weight="1"
                android:gravity="center"/>
            <TextView
                android:id="@+id/tV_dot"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/tV_dot"
                android:layout_weight="1"
                android:gravity="center"/>
            <TextView
                android:id="@+id/tV_result"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/tV_result"
                android:layout_weight="1"
                android:gravity="center"/>
        </TableRow>


    </TableLayout>
</LinearLayout>